--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
+
+:root {
+  --navFooterBg: #f87171;
+  --bodyBg: #bfdbfe;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+html, body {
+  margin: 0;
+  padding: 0;
   min-height: 100vh;
+  width: 100vw;
+
+  font-family: 'Ubuntu', sans-serif;
+}
+
+/*##########################################################
+  NAVIGATION
+*/
+
+.navigation {
+  width: 100%;
+  min-height: 10vh;
+
+  background-color: var(--navFooterBg);
+  
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navTitle {
+  font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav-rightSide {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  font-size: 1.3rem;
+}
+
+.link {
+  text-decoration: none;
+  color: white;
+}
+
+/*##########################################################
+  BODY
+*/
+
+.appBody, .shopBody {
+  min-height: 85vh;
+  width: 100%;
+
+  background-color: var(--bodyBg);
+}
+
+.appBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carWheelDiv {
+  position: relative;
+}
+
+.carWheel1, .carWheel2 {
+  width: 12%;
+  height: 12%;
+}
+
+.carBody {
+  position: relative;
+  
+  z-index: 0;
+}
+
+.carWheel1 {
+  position: absolute;
+  bottom: 195px;
+  left: 77px;
+}
+
+.carWheel2 {
+  position: absolute;
+  right: 87px;
+  bottom: 195px;
+}
+
+@media (max-width: 510px) {
+  .appBody {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+/*##########################################################
+  FOOTER
+*/
+
+.footer {
+  width: 100%;
+  min-height: 5vh;
+  bottom: 0;
+  position: fixed;
+
+  background-color: var(--navFooterBg);
+
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+
+  color: white;
+}
+
+.github-mark {
+  width: 32px;
+  height: 32px;
 }
